[gd_scene load_steps=37 format=2]

[ext_resource path="res://Player/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/Idle.gd" type="Script" id=3]
[ext_resource path="res://Player/Move.gd" type="Script" id=4]
[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://Player/Run.gd" type="Script" id=6]
[ext_resource path="res://Player/Air.gd" type="Script" id=7]
[ext_resource path="res://Player/Shoot.gd" type="Script" id=8]
[ext_resource path="res://Player/Attack.gd" type="Script" id=9]
[ext_resource path="res://Player/footsteps.wav" type="AudioStream" id=10]
[ext_resource path="res://Player/jump.wav" type="AudioStream" id=11]
[ext_resource path="res://Player/land.wav" type="AudioStream" id=12]
[ext_resource path="res://Player/dash.wav" type="AudioStream" id=13]
[ext_resource path="res://Player/attack.wav" type="AudioStream" id=14]
[ext_resource path="res://Player/shoot.wav" type="AudioStream" id=15]
[ext_resource path="res://Player/Damage.wav" type="AudioStream" id=16]
[ext_resource path="res://Player/death.wav" type="AudioStream" id=17]
[ext_resource path="res://Player/pickup.wav" type="AudioStream" id=18]
[ext_resource path="res://Player/smoke_08.png" type="Texture" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.09967, 10.9729 )

[sub_resource type="Animation" id=2]
resource_name = "attack_run"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 71 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/AttackArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack_run"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 64, 65, 66, 67, 68, 69, 70, 71 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/AttackArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
length = 0.27
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=5]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=6]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 34, 39, 36, 37, 38 ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45, 46, 47 ]
}

[sub_resource type="Animation" id=9]
length = 0.56
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53, 54, 55 ]
}

[sub_resource type="Animation" id=10]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 58, 59, 60, 61, 62, 63 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/Move/Shoot")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("SFX/Shoot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=11]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 74, 75, 76, 77, 78, 79 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/Move/Shoot")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "damage"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 1, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("SFX/Damage")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="CanvasItemMaterial" id=13]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=14]
colors = PoolColorArray( 0.438993, 0.428171, 0.414754, 1, 0.673368, 0.673368, 0.673368, 1 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 12, 12 )

[sub_resource type="CanvasItemMaterial" id=16]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=17]
offsets = PoolRealArray( 0, 0.99807 )
colors = PoolColorArray( 0.441406, 0, 0, 1, 0.265625, 0, 0, 1 )

[node name="Player" type="KinematicBody2D" groups=[
"camera_shakers",
"player",
]]
position = Vector2( 0, -1 )
collision_layer = 2
collision_mask = 65
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.793495, 4.41866 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 2
anims/attack = SubResource( 2 )
anims/attack_run = SubResource( 3 )
anims/dash = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/interact = SubResource( 6 )
anims/jump = SubResource( 7 )
anims/jump_air = SubResource( 8 )
anims/run = SubResource( 9 )
anims/shoot = SubResource( 10 )
anims/shoot_run = SubResource( 11 )

[node name="EffectPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 12 )

[node name="Pivot" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="Pivot"]
texture = ExtResource( 1 )
vframes = 10
hframes = 8

[node name="LandParticles" type="CPUParticles2D" parent="Pivot"]
material = SubResource( 13 )
position = Vector2( 0, 17 )
emitting = false
amount = 3
lifetime = 0.5
one_shot = true
explosiveness = 0.77
local_coords = false
texture = ExtResource( 19 )
direction = Vector2( 0, -1 )
spread = 84.79
gravity = Vector2( 0, 0 )
initial_velocity = 44.22
angular_velocity = 44.08
angular_velocity_random = 0.25
linear_accel = -53.02
color_ramp = SubResource( 14 )

[node name="BulletSpawner" type="Position2D" parent="Pivot"]
position = Vector2( 9, -1 )

[node name="AttackArea" type="Area2D" parent="Pivot"]
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AttackArea"]
position = Vector2( 8, 4 )
shape = SubResource( 15 )

[node name="BloodParticles" type="CPUParticles2D" parent="Pivot"]
material = SubResource( 16 )
emitting = false
amount = 80
lifetime = 0.3
one_shot = true
local_coords = false
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 47.61
angular_velocity = 0.76
angular_velocity_random = 0.48
linear_accel = 61.9
linear_accel_random = 0.16
color_ramp = SubResource( 17 )
anim_speed = 10.01

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = NodePath("Move/Idle")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 3 )

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )

[node name="Air" type="Node" parent="StateMachine/Move"]
script = ExtResource( 7 )

[node name="Shoot" type="Node" parent="StateMachine/Move"]
script = ExtResource( 8 )

[node name="Attack" type="Node" parent="StateMachine/Move"]
script = ExtResource( 9 )

[node name="SFX" type="Node" parent="."]

[node name="Footsteps" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 10 )

[node name="Jump" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 11 )

[node name="Land" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 12 )

[node name="Attack" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 14 )

[node name="Dash" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 13 )

[node name="Shoot" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 15 )

[node name="Damage" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 16 )

[node name="Death" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 17 )

[node name="Pickup" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 18 )

[node name="PlayerVisuals" type="Node2D" parent="."]
